# Cube

./: .gitignore  LICENCE  Makefile  README.md  dune-project  notes.md  rubiks.opam
lib/: nodune  solve.ml
lib/cube/: cube.ml  dune
lib/rubiks_cube/: cube.ml  dune  util.ml
lib/solver/: cross.ml  cross.mli  dune  f2l.ml  f2l.mli  oll.ml  oll.mli  pll.ml  pll.mli  solver.ml  util.ml
test/: common.ml  dune  test_oll.ml  test_pll.ml  test_rubiks.ml
